@@ -17,6 +17,7 @@ New features:
 A.F....... [ZBX-1357] updated American English, French, Hungarian, Italian, Japanese, Russian, Slovak and Turkish translations; thanks to Zabbix translators (Richlv)
 
 Bug fixes:
+..F....... [ZBX-7518] fixed graph scrollbar overflow when clicking period "All" and with no page refresh option (Ivo)
 A......... [ZBX-7578] fixed graph item validation (Eduard)
 ..F....... [ZBX-7616] fixed green background color for "New group" field in host edit form (Ivo)
 ...G...... [ZBX-7567] fixed processing of services[] key without a 3rd parameter (Sasha)
